--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 spring.application.name=proyecto-cloud
 server.port=8095
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# Spring Security Configuration
+spring.security.filter.order=10
+
+# Session Configuration
+server.servlet.session.timeout=30m
+auth.service.url=http://localhost:8090
+
+# Error Handling
+server.error.whitelabel.enabled=false
+spring.web.resources.add-mappings=false
+
 
