--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 spring.security.filter.order=10
 
 # Session Configuration
-server.servlet.session.timeout=30m
-auth.service.url=http://localhost:8090
+server.servlet.session.timeout=5m
+spring.session.timeout=300s
+ auth.service.url=http://localhost:8090
 
 # Error Handling
 server.error.whitelabel.enabled=false
