--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,11 @@ server.port=8095
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 # Spring Security Configuration
 spring.security.filter.order=10
-
 # Session Configuration
 server.servlet.session.timeout=5m
 spring.session.timeout=300s
- auth.service.url=http://localhost:8090
-
+auth.service.url=http://localhost:8090
+api.gateway.url=${API_GATEWAY_URL:http://localhost:8090}
 # Error Handling
 server.error.whitelabel.enabled=false
 spring.web.resources.add-mappings=false
