--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,11 @@ api.gateway.url=${API_GATEWAY_URL:http://localhost:8090}
 # Error Handling
 server.error.whitelabel.enabled=false
 spring.web.resources.add-mappings=false
+spring.servlet.multipart.max-file-size=100MB
+# Aumentar el tamaño máximo de la solicitud
+spring.servlet.multipart.max-request-size=100MB
+# Permitir tipos de contenido adicionales
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.resolve-lazily=true
 
 
