reestablecimiento de contraseña completo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,11 @@ spring.security.filter.order=10
 server.servlet.session.timeout=5m
 spring.session.timeout=300s
 auth.service.url=http://localhost:8090
+# Configuración del API Gateway
 api.gateway.url=${API_GATEWAY_URL:http://localhost:8090}
+# URL de redirección para restablecimiento de contraseña
+password.reset.redirect.url=${PASSWORD_RESET_REDIRECT_URL:http://localhost:8095/password-reset}
+
 # Error Handling
 server.error.whitelabel.enabled=false
 spring.web.resources.add-mappings=false
