--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,13 @@ password.reset.redirect.url=${PASSWORD_RESET_REDIRECT_URL:http://localhost:8095/
 
 # Error Handling
 server.error.whitelabel.enabled=false
-spring.web.resources.add-mappings=false
+spring.web.resources.add-mappings=true
 spring.servlet.multipart.max-file-size=100MB
 # Aumentar el tamaño máximo de la solicitud
 spring.servlet.multipart.max-request-size=100MB
 # Permitir tipos de contenido adicionales
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.resolve-lazily=true
+
 
 
