feat: Integración de la funcionalidades de 'Sketch' y de 'Slice'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=proyecto-cloud
 server.port=8095
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.security.filter.order=10
-server.servlet.session.timeout=5m
-spring.session.timeout=300s
+server.servlet.session.timeout=40m
+spring.session.timeout=40m
 auth.service.url=http://localhost:8090
 api.gateway.url=${API_GATEWAY_URL:http://localhost:8090}
 password.reset.redirect.url=${PASSWORD_RESET_REDIRECT_URL:http://localhost:8095/password-reset}
