--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,9 @@ api.gateway.url=${API_GATEWAY_URL:http://localhost:8090}
 password.reset.redirect.url=${PASSWORD_RESET_REDIRECT_URL:http://localhost:8095/password-reset}
 server.error.whitelabel.enabled=false
 spring.web.resources.add-mappings=true
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=10000MB
+spring.servlet.multipart.max-request-size=10000MB
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.resolve-lazily=true
-
 
 
