--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 spring.security.filter.order=10
 server.servlet.session.timeout=40m
 spring.session.timeout=40m
-auth.service.url=http://192.168.202.3:8090
-api.gateway.url=http://192.168.202.3:8090
+auth.service.url=http://localhost:8090
+api.gateway.url=http://localhost:8090
 password.reset.redirect.url=${PASSWORD_RESET_REDIRECT_URL:http://localhost:8095/password-reset}
 server.error.whitelabel.enabled=false
 spring.web.resources.add-mappings=true
